styles.css
:root {
  --light-bg: #e9ddc6;
  --light-text: #2b2b2b;

  --dark-bg: #2b2b2b;
  --dark-text: #e7e7e7;
}

html {
  width: 100%;
  position: absolute;
  background-color: transparent;
  /* border: 10px solid red; */
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background: var(--light-bg);
  background-size: cover, contain;
  background-position: center, right bottom;
  background-repeat: no-repeat, no-repeat;
  font-family: 'Cormorant Garamond', serif;
  /* border: 10px solid orange; */
}

body.dark-theme {
  background: var(--dark-bg);
  color: var(--dark-text);
}

svg {
  fill: var(--light-text);
  width: 100%;
  /* border: 1px solid red; */
}

svg.dark-theme {
  fill: var(--dark-text);
}

.bg-img {
  position: fixed;
  opacity: 15%;
  pointer-events: none;
}

#title {
  height: auto;
}

#clock {
  top: 25vh;
  right: 0;
  rotate: -45deg;
  transform: translate(50%, -10%);
  -webkit-transform: translate(50%, -10%);
  -moz-transform: translate(50%, -10%);
  -ms-transform: translate(50%, -10%);
  -o-transform: translate(50%, -10%);
}

p,
blockquote {
  margin: 1rem;
  margin-bottom: 3rem;
  font-size: 2.2vw;
  background: transparent;
}

a {
  text-decoration: none;
}

footer p,
footer a {
  font-size: 1rem;
}

footer {
  display: inline-flex;
  height: 2rem;
  padding: 0;
  margin: auto 0 1rem 0;
  width: 100%;
  /* border: 1px solid yellowgreen; */
}

.footer-right {
  display: flex;
  right: 0;
  margin: 0 2rem 0 auto;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  gap: 4%;
  margin: 2rem 3rem;
  top: 0;
  left: 0;
  /* flex-wrap: wrap-reverse; */
}

.left-col {
  /* border: 1px solid green; */
  flex-basis: 30%;
  flex-grow: 1;
  flex-shrink: 0;
  text-align: left;
}

.right-col {
  /* border: 1px solid green; */
  flex-basis: 60%;
  flex-grow: 1;
  flex-shrink: 1;
}

.buttons-container {
  margin: 2rem 0;
  text-align: center;
}

button {
  height: 2.2rem;
  width: 2.2rem;
  padding: 0;
  opacity: 80%;
  background-color: transparent;
  border: none;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
}

.btn-img {
  padding: 0;
  height: auto;
  width: 100%;
}

button:hover {
  opacity: 100%;
  padding: 0;
}

@media (orientation: portrait) {
  .left-col {
    text-align: center;
  }

  .flex-container {
    gap: 4em;
  }

  .right-col {
    flex-basis: 100%;
  }

  .buttons {
    margin: 1rem 0;
  }

  button {
    height: 2.5rem;
    width: 2.5rem;
    margin: 0.2rem;
    opacity: 100%;
  }

  p,
  blockquote {
    margin-top: 0;
    font-size: 4.2vw;
  }

  a {
    font-size: 4.2vw;
  }

  #clock {
    position: absolute;
    top: 4rem;
    transform: translate(50%, 0%) scale(110%);
  }
}

